--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@solana-developers/compressed-nfts",
+  "name": "pirate-ship-bootcamp",
   "version": "1.0.0",
   "license": "MIT",
   "extension": [
